Disable the slide toggle and action buttons on inclusion table when update permission is now allowed

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-inclusions-section-card/experiment-inclusions-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-inclusions-section-card/experiment-inclusions-section-card.component.html
@@ -32,6 +32,8 @@
   <app-experiment-inclusions-table
     content
     *ngIf="isSectionCardExpanded && experiment.filterMode !== FILTER_MODE.INCLUDE_ALL"
+    [slideToggleDisabled]="!(permissions$ | async)?.experiments.update"
+    [actionsDisabled]="!(permissions$ | async)?.experiments.update"
     (rowAction)="onRowAction($event, experiment.id)"
   ></app-experiment-inclusions-table>
 </app-common-section-card>
