Implement experiment metrics table component

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-metrics-section-card/experiment-metrics-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-metrics-section-card/experiment-metrics-section-card.component.html
@@ -25,5 +25,9 @@
   <app-experiment-metrics-table
     content
     *ngIf="isSectionCardExpanded"
+    [queries]="experiment.queries || []"
+    [isLoading$]="isLoadingExperiment$"
+    [actionsDisabled]="!(permissions$ | async)?.experiments.update"
+    (rowAction)="onRowAction($event, experiment.id)"
   ></app-experiment-metrics-table>
 </app-common-section-card>
