--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-details-page-content.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-details-page-content.component.html
@@ -12,6 +12,7 @@
       <app-experiment-decision-points-section-card
         *ngIf="activeTabIndex === 0"
         [isSectionCardExpanded]="isSectionCardExpanded"
+        [experimentContext]="experiment.context[0] || ''"
         section-card
       ></app-experiment-decision-points-section-card>
 
