lint all the things

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
@@ -19,13 +19,7 @@
         <mat-label class="ft-14-400">
           {{ 'home.new-experiment.overview.description.placeHolder' | translate }}
         </mat-label>
-        <input
-          class="ft-14-400"
-          matInput
-          formControlName="description"
-          autocomplete="off"
-          appTrimInput
-        />
+        <input class="ft-14-400" matInput formControlName="description" autocomplete="off" appTrimInput />
       </mat-form-field>
 
       <mat-form-field class="chips" appearance="outline" subscriptSizing="dynamic">
