--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag/common-tag.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-tag/common-tag.component.html
@@ -1,8 +1,5 @@
 <mat-chip class="tag" (click)="onTagClick()">
-  <span
-    class="chip-label"
-    [matTooltip]="tag.length > 16 ? tag : null"
-    matTooltipPosition="above">
+  <span class="chip-label" [matTooltip]="tag.length > 16 ? tag : null" matTooltipPosition="above">
     {{ tag | truncate : 16 }}
   </span>
 </mat-chip>
