--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/preview-user/preview-user.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/preview-user/preview-user.component.html
@@ -6,12 +6,7 @@
       <mat-label class="ft-14-400">
         {{ 'users-global.form-id-placeholder.text' | translate }}
       </mat-label>
-      <input
-        class="ft-14-400"
-        matInput
-        formControlName="id"
-        appTrimInput
-      />
+      <input class="ft-14-400" matInput formControlName="id" appTrimInput />
     </mat-form-field>
 
     <button
