--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/modals/new-user/new-user.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/modals/new-user/new-user.component.html
@@ -6,12 +6,7 @@
         <mat-label class="ft-14-400">
           {{ 'profile.table.firstName.text' | translate }}
         </mat-label>
-        <input
-          class="ft-14-400 input"
-          matInput
-          formControlName="firstName"
-          appTrimInput
-        />
+        <input class="ft-14-400 input" matInput formControlName="firstName" appTrimInput />
         <mat-error class="ft-14-400" *ngIf="newUserForm.controls.firstName.hasError('required')">
           {{ 'profile.new-user.firstName-required-error.text' | translate }}
         </mat-error>
@@ -20,12 +15,7 @@
         <mat-label class="ft-14-400">
           {{ 'profile.table.lastName.text' | translate }}
         </mat-label>
-        <input
-          class="ft-14-400 input"
-          matInput
-          formControlName="lastName"
-          appTrimInput
-        />
+        <input class="ft-14-400 input" matInput formControlName="lastName" appTrimInput />
         <mat-error class="ft-14-400" *ngIf="newUserForm.controls.lastName.hasError('required')">
           {{ 'profile.new-user.lastName-required-error.text' | translate }}
         </mat-error>
@@ -34,12 +24,7 @@
         <mat-label class="ft-14-400">
           {{ 'profile.global.email.text' | translate }}
         </mat-label>
-        <input
-          class="ft-14-400 input"
-          matInput
-          formControlName="email"
-          appTrimInput
-        />
+        <input class="ft-14-400 input" matInput formControlName="email" appTrimInput />
         <mat-error class="ft-14-400" *ngIf="newUserForm.controls.email.hasError('required')">
           {{ 'profile.new-user.email-required-error.text' | translate }}
         </mat-error>
