--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/modals/upsert-private-segment-list-modal/upsert-private-segment-list-modal.component.html
@@ -53,25 +53,14 @@
       ></app-common-tags-input>
       <mat-form-field appearance="outline">
         <mat-label class="ft-14-400">Name</mat-label>
-        <input
-          matInput
-          formControlName="name"
-          placeholder="e.g., My schools"
-          class="ft-14-400"
-          appTrimInput
-        />
+        <input matInput formControlName="name" placeholder="e.g., My schools" class="ft-14-400" appTrimInput />
         <mat-hint class="form-hint ft-12-400">
           {{ config.nameHint | translate }}
         </mat-hint>
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label class="ft-14-400">Description (optional)</mat-label>
-        <input
-          matInput
-          formControlName="description"
-          class="ft-14-400"
-          appTrimInput
-        />
+        <input matInput formControlName="description" class="ft-14-400" appTrimInput />
       </mat-form-field>
     </ng-container>
   </form>
