--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-participant-list-table/common-details-participant-list-table.component.html
@@ -22,7 +22,9 @@
         {{ PARTICIPANT_LIST_TRANSLATION_KEYS.VALUES | translate }}
       </th>
       <td mat-cell *matCellDef="let rowData" class="values-column ft-14-400">
-        <ng-container *ngIf="rowData?.segment && rowData.listType !== memberTypes.SEGMENT"> {{ getValuesText(rowData) }} </ng-container>
+        <ng-container *ngIf="rowData?.segment && rowData.listType !== memberTypes.SEGMENT">
+          {{ getValuesText(rowData) }}
+        </ng-container>
       </td>
     </ng-container>
 
@@ -37,14 +39,16 @@
             [routerLink]="['/segments', 'detail', rowData.segment.subSegments[0].id]"
             class="segment-name"
             [matTooltip]="rowData.segment.name?.length > 24 ? rowData.segment.name : null"
-            matTooltipPosition="right">
+            matTooltipPosition="right"
+          >
             {{ rowData.segment.name | truncate : 24 }}
           </a>
         </ng-container>
         <ng-template #plainText>
           <span
             [matTooltip]="rowData.segment?.name?.length > 24 ? rowData.segment?.name : null"
-            matTooltipPosition="right">
+            matTooltipPosition="right"
+          >
             {{ rowData.segment?.name | truncate : 24 }}
           </span>
         </ng-template>
