Remove redundant fallback

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-decision-points-section-card/experiment-decision-points-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-decision-points-section-card/experiment-decision-points-section-card.component.html
@@ -28,6 +28,6 @@
     [decisionPoints]="experiment.partitions"
     [isLoading$]="experimentService.isLoadingSelectedExperiment$"
     [actionsDisabled]="!(permissions$ | async)?.experiments.update"
-    (rowAction)="onRowAction($event, experiment.id, experiment.context[0] || '')"
+    (rowAction)="onRowAction($event, experiment.id, experiment.context[0])"
   ></app-experiment-decision-points-table>
 </app-common-section-card>
