add edit-condition-weights modal

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-conditions-section-card/experiment-conditions-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/pages/experiment-details-page/experiment-details-page-content/experiment-conditions-section-card/experiment-conditions-section-card.component.html
@@ -30,5 +30,6 @@
     [isLoading$]="experimentService.isLoadingSelectedExperiment$"
     [actionsDisabled]="!(permissions$ | async)?.experiments.update"
     (rowAction)="onRowAction($event, experiment.id)"
+    (editWeights)="onEditWeights($event, experiment)"
   ></app-experiment-conditions-table>
 </app-common-section-card>
