changes to get closer to the spec

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/modals/edit-condition-weights-modal/edit-condition-weights-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/modals/edit-condition-weights-modal/edit-condition-weights-modal.component.scss
@@ -17,7 +17,19 @@
     line-height: 8px;
     content: '\200C';
   }
- .conditions-table {
+  .conditions-table {
+    /* Remove arrows/spinners from input type number */
+    input[type="number"] {
+      -webkit-appearance: textfield;
+      -moz-appearance: textfield;
+      
+      &::-webkit-outer-spin-button,
+      &::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+    } 
+
     ::ng-deep thead {
       background-color: var(--zircon);
 
@@ -61,6 +73,39 @@
       }
     }
 
+    ::ng-deep tfoot {
+      tr.mat-mdc-footer-row.summary-footer-row {
+        height: 48px;
+        border-top: 2px solid var(--light-grey-2);
+        background-color: var(--light-grey-0);
+
+        td.summary-row {
+          min-width: 96px;
+          padding-left: 0;
+          font-weight: 600;
+
+          &.condition-column {
+            padding-left: 32px;
+          }
+
+          &.weight-column {
+            text-align: right;
+            padding-right: 32px;
+          }
+
+          .total-weight {
+            margin: 4px;
+          }
+
+          .error-text {
+            color: #f44336;
+            font-weight: 500;
+          }
+
+        }
+      }
+    }
+
     .condition-column {
       width: 65%;
       padding-left: 32px;
@@ -68,37 +113,23 @@
 
     .weight-column {
       width: 35%;
-      text-align: center;
+      text-align: right;
+      padding-right: 32px;
       
       .weight-input {
         width: 90px;
         flex-direction: row;
+
+        input {
+          text-align: right;
+        }
+        
         
         .mat-mdc-form-field-subscript-wrapper {
           display: none;
         }
       }
     }
-  }
-}
-.weight-summary {
-  margin-top: 16px;
-  padding: 12px;
-  border: 1px solid #e0e0e0;
-  border-radius: 4px;
-  text-align: center;
-  
-  &.error {
-    border-color: #f44336;
-    background-color: #ffebee;
-  }
-  
-  .success-text {
-    color: #4caf50;
-  }
-  
-  mat-error {
-    margin: 0;
   }
 }
 
