Make statistics dropdown appear on Metric ID selection

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiments/modals/upsert-metric-modal/upsert-metric-modal.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiments/modals/upsert-metric-modal/upsert-metric-modal.component.html
@@ -103,7 +103,7 @@
     </mat-form-field>
 
     <!-- Individual Statistic (Repeatable only) -->
-    <ng-container *ngIf="showIndividualStatistic && showAggregateStatistic">
+    <ng-container *ngIf="showIndividualStatistic">
       <mat-form-field appearance="outline">
         <mat-label class="ft-14-400">Individual Statistic</mat-label>
         <mat-select formControlName="individualStatistic" class="ft-14-400">
