--- a/frontend/projects/upgrade/src/app/features/dashboard/home/root/home.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/root/home.component.html
@@ -2,7 +2,7 @@
   <h1 class="title ft-32-700">{{ 'global.experiment.title' | translate }}</h1>
   <span class="subtitle ft-16-400" [innerHTML]="'home.experiment.text.subtitle' | translate"></span>
 
-  <ng-container *ngIf="isLoadingExperiments$ | async; else loadingExperimentState">
+  <ng-container *ngIf="haveInitialExperimentsLoaded$ | async; else loadingExperimentState">
     <mat-card
       appearance="raised"
       class="experiment-table"
