--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-overview-details-section-card/segment-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-overview-details-section-card/segment-overview-details-section-card.component.html
@@ -13,7 +13,7 @@
   <!-- header-right -->
   <app-common-section-card-action-buttons
     header-right
-    [showMenuButton]="isUserAdmin$ | async"
+    [showMenuButton]="!(isUserReader$ | async)"
     [menuButtonItems]="menuButtonItems$ | async"
     [isSectionCardExpanded]="isSectionCardExpanded"
     (menuButtonItemClick)="onMenuButtonItemClick($event, segment)"
