Add ids to UI and search for segments, flags, and experiments

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-details-page/feature-flag-details-page-content/feature-flag-overview-details-section-card/feature-flag-overview-details-section-card.component.html
@@ -8,6 +8,7 @@
     [versionNumber]="flag.versionNumber"
     [chipClass]="flag.status"
     [showWarning]="shouldShowWarning$ | async"
+    [id]="flag.id"
   ></app-common-section-card-title-header>
 
   <!-- header-right -->
