--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -66,6 +66,7 @@
               ('home.view-experiment.updated-at.text' | translate) + (experiment.updatedAt | date : 'MMM d, y, h:mm a')
             }}
           </span>
+          <span class="ft-14-700">ID: {{ experiment.id }}</span>
         </span>
 
         <!-- <div class="action-buttons">
