--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-overview-details-section-card/segment-overview-details-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/pages/segment-details-page/segment-details-page-content/segment-overview-details-section-card/segment-overview-details-section-card.component.html
@@ -7,6 +7,7 @@
     [updatedAt]="segment.updatedAt"
     [versionNumber]="segment.versionNumber"
     [chipClass]="segment.status.toLowerCase()"
+    [id]="segment.id"
   ></app-common-section-card-title-header>
   <!-- TODO: Update the SEGMENT_STATUS enum to lowercase and remove toLowerCase() once the legacy Segments code is removed -->
 
