--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-title-header/common-section-card-title-header.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-section-card-title-header/common-section-card-title-header.component.html
@@ -24,4 +24,7 @@
       </span>
     </ng-container>
   </p>
+  <ng-container *ngIf="id">
+    <div class="subtitle ft-14-400">ID: {{ id }}</div>
+  </ng-container>
 </div>
